# gitlab-graphql

./: .gitignore  ADR-001-GitLab-GraphQL-Client.md  AGENTS.md  API_SURFACE_AND_IMPLEMENTATION_SKELETON.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GRAPHQL_OPERATIONS_CONTRACT.md  NOTICE  README.md  SECURITY.md  TESTING.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-close-issues-on-merge.yml  ci.yml  release.yml
docs/: ADR-001-GitLab-GraphQL-Client.md  API_SURFACE_AND_IMPLEMENTATION_SKELETON.md  ARCHITECTURE.md  BASE-STANDARDS-FOR-ORCHESTRATED-REPOS.md  DOMAIN_MODELS_AND_HIERARCHY_PARSING.md  GRAPHQL_OPERATIONS_CONTRACT.md  GROK_BUILD_INTEGRATION.md  TESTING.md  code-doc-synchronization-report.md  development-workflow.md  grok-playbooks.md
examples/: create_feature_with_tasks.py
src/xgic/: __init__.py
src/xgic/gitlab/: __init__.py
src/xgic/gitlab/graphql/: __init__.py  client.py  config.py  exceptions.py  models.py
src/xgic/gitlab/graphql/graphql/: __init__.py  operations.py
tests/: __init__.py  test_client.py
